test/syntax_checked/s0476_number_complement/hafis/ablation_o3_r50/result.txt
./test/syntax_check/s0476_number_complement/hafis/ablation_o3_r50/Solution.java:10: error: integer number too large
//@ ensures((\result >= 0) && (\result < 2147483648));
                                         ^
1 error
